examples/test/testpolicy3100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3100
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key8: value22
      key32: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value6
          key32: value17
          key37: value15
      podSelector:
        matchLabels:
          key14: value47
